# mysoc-dataset

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
src/mysoc_dataset/: __init__.py  __main__.py
tests/: test_meta.py  test_mysoc_dataset.py
