[tool.poetry]
name = "mysoc-dataset"
version = "0.1.0"
description = "Tool to download mySociety datasets"
authors = ["Alex Parsons <alex.parsons@mysociety.org>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ajparsons/mysoc-dataset"
repository = "https://github.com/ajparsons/mysoc-dataset"
include = [
    "LICENSE.md",
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"
black = "^22.3.0"
pyright = "^1.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"